Added Software Framework Description.

--- a/citation.bib
+++ b/citation.bib
@@ -9,3 +9,33 @@
   publisher={Springer}
 }
 
+@article{ten1989object,
+  title={Object-oriented programming},
+  author={Ten Dyke, Richard P and Kunz, John C.},
+  journal={IBM Systems Journal},
+  volume={28},
+  number={3},
+  pages={465--478},
+  year={1989},
+  publisher={IBM}
+}
+
+@article{fukushima1984modified,
+  title={A modified Frank-Wolfe algorithm for solving the traffic assignment problem},
+  author={Fukushima, Masao},
+  journal={Transportation Research Part B: Methodological},
+  volume={18},
+  number={2},
+  pages={169--177},
+  year={1984},
+  publisher={Elsevier}
+}
+
+@inproceedings{gartner1977analysis,
+  title={Analysis and control of transportation networks by Frank-Wolfe decomposition},
+  author={Gartner, Nathaniel H},
+  booktitle={Proceedings of the 7th International Symposium on Transportation and Traffic Theory},
+  pages={14--17},
+  year={1977},
+  organization={The Institute of Systems Science Research, Kyoto, Japan}
+}
