Added paragraphs in Introduction

--- a/citation.bib
+++ b/citation.bib
@@ -39,3 +39,113 @@
   year={1977},
   organization={The Institute of Systems Science Research, Kyoto, Japan}
 }
+
+@article{peeta2001foundations,
+  title={Foundations of dynamic traffic assignment: The past, the present and the future},
+  author={Peeta, Srinivas and Ziliaskopoulos, Athanasios K},
+  journal={Networks and spatial economics},
+  volume={1},
+  number={3-4},
+  pages={233--265},
+  year={2001},
+  publisher={Springer}
+}
+
+@inproceedings{boyce1989route,
+  title={Route Guidance Systems for Managing Urban Transportation Networks: Review and Prospects},
+  author={Boyce, DE},
+  booktitle={Tenth Italian Regional Science Conference, Rome, Italy},
+  year={1989}
+}
+
+
+@incollection{mahut2010traffic,
+  title={Traffic simulation with dynameq},
+  author={Mahut, Michael and Florian, Michael},
+  booktitle={Fundamentals of Traffic Simulation},
+  pages={323--361},
+  year={2010},
+  publisher={Springer}
+}
+
+@misc{chiu2011dynust,
+  title={DynusT. Simulation-based Dynamic Traffic Assignment Mesoscopic Model Software},
+  author={Chiu, Yi-Chang},
+  year={2011}
+}
+
+@misc{TransDNA,
+  title = {TransDNA Dynamic Traffic Assignment Software},
+  howpublished = {\url{https://www.caliper.com/transdna/transdna-dta-software.htm}},
+  note = {Accessed: 2018-03-27}
+}
+
+@article{rakha2012integration,
+  title={Integration framework for modeling eco-routing strategies: logic and preliminary results},
+  author={Rakha, Hesham A and Ahn, Kyoungho and Moran, Kevin},
+  journal={International Journal of Transportation Science and Technology},
+  volume={1},
+  number={3},
+  pages={259--274},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{taylor2003contram,
+  title={The CONTRAM dynamic traffic assignment model},
+  author={Taylor, Nicholas B},
+  journal={Networks and Spatial Economics},
+  volume={3},
+  number={3},
+  pages={297--322},
+  year={2003},
+  publisher={Springer}
+}
+
+@article{zhou2014dtalite,
+  title={DTALite: A queue-based mesoscopic traffic simulator for fast model evaluation and calibration},
+  author={Zhou, Xuesong and Taylor, Jeffrey},
+  journal={Cogent Engineering},
+  volume={1},
+  number={1},
+  pages={961345},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
+@article{ziliaskopoulos2000internet,
+  title={An Internet-based geographic information system that integrates data, models and users for transportation applications},
+  author={Ziliaskopoulos, Athanasios K and Waller, S Travis},
+  journal={Transportation Research Part C: Emerging Technologies},
+  volume={8},
+  number={1-6},
+  pages={427--444},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@inproceedings{ben2001dynamit,
+  title={DynaMIT-P: dynamic assignment model system for transportation planning},
+  author={Ben-Akiva, Moshe and Koutsopoulos, Haris N and Walker, Joan},
+  booktitle={WCTR Conference Seoul, Korea},
+  year={2001}
+}
+
+@misc{DynaMIT,
+  title = {DynaMIT},
+  howpublished = {\url{https://its.mit.edu/software/dynamit}},
+  note = {Accessed: 2018-03-27}
+}
+
+@article{mahmassani2004dynasmart,
+  title={DYNASMART-P Version 0.930. 7 user’s guide},
+  author={Mahmassani, HS and Sbayti, HA and Zhou, X},
+  journal={Prepared for US Department of Transportation},
+  year={2004}
+}
+
+@misc{DYNASMART,
+  title = {Dynamic Network Assignment-Simulation Model for Advanced Roadway Telematics},
+  howpublished = {\url{http://mctrans.ce.ufl.edu/featured/dynasmart/}},
+  note = {Accessed: 2018-03-27}
+}
