--- a/main.tex
+++ b/main.tex
@@ -116,11 +116,16 @@ email address}}
 \end{IEEEkeywords}
 
 \section{Introduction}
+ In recent years, dynamic traffic assignment (DTA) has gained heightened interest, as researchers and practitioners are recognizing the need to predict the spatio-temporal evolution of traffic and the limitations of  static traffic assignment methods\cite{peeta2001foundations}. Existing static planning methods cannot fully model traffic congestion in road networks because of their inability to represent departure/arrival traveler's decisions and queue formation and dissipation when traffic demand exceeds road capacities\cite{nie2010solving}. They were developed for long term transportation planning and are not applicable in dynamic route guidance systems that require the ability to solve transportation problems in real time\cite{boyce1989route}.
+ 
+Though the theory of DTA is still relatively undeveloped, variational inequality (VI) has proven to provide a unified formulation to address various classes of equilibrium and equivalent optimization problems in the DTA context. VI formulations can model more realistic traffic scenario by bypassing the issues of solution intractability in DTA problems with asymmetric link interactions associated with other analytical DTA methods such as mathematical programming and optimal control formulations . In addition, VI's extension and sensitivity analysis can be conveniently performed \cite{peeta2001foundations}. In this paper, we extend VI formulation to unify analytical DTA models with simulation-based DTA models. Simulation-based DTA methods compliment analytical techniques by addressing the shortcomings of analytical link models and exit functions in reproducing dynamic traffic interactions, satisfying First-In-Fist-Out property, and replicating complex vehicles and multi-user class interactions.
 
-Paper contributions:
+Using this general DTA VI formulation, we created a modular and extendable software framework, \textit{ta\_solver} to solve DTA problems. There exist many commercial and scientific DTA software tools that uses simulation-based models such as CONTRAM \cite{taylor2003contram}, DTALite \cite{zhou2014dtalite}, Dynameq \cite{mahut2010traffic}, DynaMIT-P \cite{DynaMIT,ben2001dynamit}, DYNASMART-P \cite{DYNASMART,mahmassani2004dynasmart}, DynusT \cite{chiu2011dynust}, INTEGRATION \cite{rakha2012integration}, and TransDNA \cite{TransDNA}. To the best of our knowledge, our software is first to combine simulation-based DTA models with analytical methods including mathematical programming and optimal control into one software platform, using a clear underlying VI DTA formulation. The general VI formulation determines the overall software architecture, but also provide a way to incorporate any type of DTA problem that can be represented with VI. Ziliaskopoulos and Waller developed VISTA, a internet-based geographic information system that integrates transportation spatio-temporal data and models into a single framework. While VISTA does integrate analytical and simulation-based DTA models and DTA solution algorithms, it was built with particular focus on the integration of different transportation modules, unlike \textit{ta\_solver} that was designed to solve DTA problems. In addition, VISTA has no fundamental DTA problem formulation, while \textit{ta\_solver} is based on VI. 
+
+Hence, our papers contributions include:
 \begin{enumerate}
-    \item Unification of traffic assignment problems under a clear variational inequality formulation (with good notation).
-    \item A modular software framework with solvers based on the unified variational inequality formulation.
+    \item A clear and unified variational inequality formulation for traffic assignment problems (with good notation).
+    \item A modular software framework,\textit{ta\_solver},  with solvers based on the unified variational inequality formulation.
     \item Demonstration of the performance of the software framework using different models.
 \end{enumerate}
 
@@ -130,18 +135,18 @@ Paper contributions:
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\linewidth]{Class_Diagram.PNG}
+    \includegraphics[width=\linewidth]{Software_Block_Diagram.PNG}
     \caption{Software Framework Architecture}
-    \label{fig:class_diagram}
+    \label{fig:Block_Diagram}
 \end{figure}
 
-Using the unified VI DTA formulation, we designed a modular and extendable software framework to solve DTA problems. As shown in Figure~\ref{fig:class_diagram}, the software framework has two main modules: the Model Manager and the Solver modules. The Demand Assignment and Path Costs components serve to encode the input/output messages between the Model Manager and Solver.
+Using the unified VI DTA formulation, we designed a modular and extendable software framework to solve DTA problems. As shown in Figure~\ref{fig:Block_Diagram}, the software framework has two main modules: the Model Manager and the Solver modules. The Demand Assignment and Path Costs components are wrappers for an assignment per path, commodity and time, and for path travel costs respectively.
 
-The Model Manager has three components that correspond to the $F = \Sigma\circ c \circ \mathbb{T}$ composition function: the Traffic Model, Cost Function and Sum components. It also uses the State Trajectory module to encode the link states (e.g: flow per link), and the Link Cost module to represent the travel cost per link (e.g experienced travel time on a link). The Model Manager's role is to translate an assignment $h$, specified as a sequence of demand per path by the Demand Assignment module, into the corresponding path costs, represented as a sequence of cost per path.
+The Model Manager has three components that correspond to the $F = \Sigma\circ c \circ \mathbb{T}$ composition function: the Traffic Model, Cost Function and Sum components. The State Trajectory module is a wrapper for the link states (e.g: flow per link), and the Link Cost module is a wrapper for the travel cost per link (e.g experienced travel time on a link). The Model Manager's role is to translate an assignment $h$, specified as a sequence of demand per path by the Demand Assignment module, into the corresponding path costs, represented as a sequence of cost per path.
 
-The Solver module serves as an interface to plug in solution algorithms for DTA. Given an assignment $h'$, a DTA solution algorithm needs the cost for each path, $F_p(h^')$ $\forall p\in\mathcal{P}$, to determine if $h'$ is an equilibrium assignment according to equation (x). Accordingly, a DTA solution algorithm implemented in the framework will use the Model Manager module via Solver interface to translate assignments to their corresponding path costs $F(h)$. The path costs allow the algorithm to determine whether it has reached equilibrium or whether/how it needs to adjust its current assignment to move towards the equilibrium state. 
+The Solver module serves as an interface to plug in solution algorithms for DTA. The generic SOLVER works in a loop in which it generates candidate demand assignments, and expects to be given the corresponding network path costs. This loop continues until an equilibrium demand assignment is reached. 
 
-The advantage of our modular software framework is that it can be easily extended to address different DTA problems. We implemented the Traffic Model and Cost Function components as interfaces, enabling a user to plug in different traffic models and cost functions respectively. For example, the software framework currently include three traffic models: the static model, Merchant and Nemhauser (MN) model, and the Point Queue Model, which all integrate in the framework via the Traffic Model component. The framework has a travel time based cost function that connect to the framework through the Cost Function module. A user can add an energy or emission based cost function. As previously mentioned, the Solver module is also an interface that allow to incorporate different DTA solution algorithm. We included three solver algorithms: the Method of Successive Averages, the Frank-Wofle Algorithm, and the Extra Projection Methods, which can be applied depending on the $F$ function properties. Finally, we also designed the whole Model Manager component as an interface, enabling a user to integrate an implementation of the $F$ composition function without having to use the Traffic model, Cost Function and Sum modules. This is useful for problems, such as simulaton-based DTA problems, where the traffic model is tightly coupled with the cost function evaluation. The complete documentation on software framework, with installations instructions can be found at ...
+The advantage of our modular software framework is that it can be easily extended to address different DTA problems. The Traffic Model and Cost Function components interfaces enable a user to plug in different traffic models and cost functions to address diverse DTA problems. For example, the software framework currently include three traffic models: the static model, Merchant and Nemhauser (MN) model, and the Point Queue Model, which all integrate in the framework via the Traffic Model component. The framework has a travel time based cost function. A user can add an energy or emission based cost function. The Solver interface allows to incorporate different DTA solution algorithm. We included three solver algorithms: the Method of Successive Averages, the Frank-Wofle Algorithm, and the Extra Projection Methods, which can be applied depending on the $F$ function properties. Finally, we also designed the whole Model Manager component as an interface, enabling a user to integrate an implementation of the $F$ composition function without having to use the Traffic model, Cost Function and Sum modules. This is useful for problems, such as simulaton-based DTA problems, where the traffic model is tightly coupled with the cost function evaluation. The complete documentation on software framework, with installations instructions can be found at ...
 
 \section{Implemented Traffic Models}
 \subsection{Static Model}
