Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -120,13 +120,13 @@ email address}}
 \end{IEEEkeywords}
 
 \section{Introduction}
- In recent years, dynamic traffic assignment (DTA) has gained heightened interest, as researchers and practitioners are recognizing the need to predict the spatio-temporal evolution of traffic and the limitations of  static traffic assignment methods\cite{peeta2001foundations}. Existing static planning methods cannot fully model traffic congestion in road networks because of their inability to represent departure/arrival traveler's decisions and queue formation and dissipation when traffic demand exceeds road capacities\cite{nie2010solving}. They were developed for long term transportation planning and are not applicable in dynamic route guidance systems that require the ability to solve transportation problems in real time\cite{boyce1989route}.
+ In recent years, dynamic traffic assignment (DTA) has gained heightened interest, as researchers and practitioners are recognizing the need to predict the spatio-temporal evolution of traffic and the limitations of  static traffic assignment methods\cite{peeta2001foundations}. Existing static planning methods cannot fully model traffic congestion because of their inability to represent departure/arrival traveler's decisions and queue formation and dissipation when traffic demand exceeds road capacities\cite{nie2010solving}. static methods were developed for long term transportation planning and are not applicable in dynamic route guidance systems that require the ability to solve transportation problems in real time\cite{boyce1989route}.
  
-Though the theory of DTA is still relatively undeveloped, variational inequality (VI) has proven to provide a unified formulation to address various classes of equilibrium and equivalent optimization problems in the DTA context. VI formulations can model more realistic traffic scenario by bypassing the issues of solution intractability in DTA problems with asymmetric link interactions associated with other analytical DTA methods such as mathematical programming and optimal control formulations . In addition, VI's extension and sensitivity analysis can be conveniently performed \cite{peeta2001foundations}. In this paper, we extend VI formulation to unify analytical DTA models with simulation-based DTA models. Simulation-based DTA methods compliment analytical techniques by addressing the shortcomings of analytical link models and exit functions in reproducing dynamic traffic interactions, satisfying First-In-Fist-Out property, and replicating complex vehicles and multi-user class interactions.
+Though the theory of DTA is still relatively undeveloped, variational inequality (VI) has proven to provide a unified formulation to address various classes of equilibrium and equivalent optimization problems in the DTA context. VI formulations can model more realistic traffic scenario by bypassing the issues of solution intractability associated with other analytical DTA methods such as mathematical programming and optimal control formulations. In addition, VI's extension and sensitivity analysis can be conveniently performed \cite{peeta2001foundations}. In this paper, we extend VI formulation to unify analytical DTA models with simulation-based DTA models. Simulation-based DTA methods compliment analytical techniques by addressing the shortcomings of analytical link models and exit functions in reproducing dynamic traffic interactions, satisfying First-In-Fist-Out property, and replicating complex vehicles and multi-user class interactions.
 
 Using this general DTA VI formulation, we created a modular and extendable software framework, \textit{ta\_solver} to solve DTA problems. There exist many commercial and scientific DTA software tools that uses simulation-based models such as CONTRAM \cite{taylor2003contram}, DTALite \cite{zhou2014dtalite}, Dynameq \cite{mahut2010traffic}, DynaMIT-P \cite{DynaMIT,ben2001dynamit}, DYNASMART-P \cite{DYNASMART,mahmassani2004dynasmart}, DynusT \cite{chiu2011dynust}, INTEGRATION \cite{rakha2012integration}, and TransDNA \cite{TransDNA}. To the best of our knowledge, our software is the first
-to combine simulation-based DTA models with analytical methods including mathematical programming and optimal control into one software platform, using a clear underlying VI DTA formulation. The general VI formulation determines the overall software architecture, but also provide a way to incorporate any type of DTA problem that can be represented with VI. Ziliaskopoulos and Waller developed VISTA,
-an internet-based geographic information system that integrates transportation spatio-temporal data and models into a single framework. While VISTA does integrate analytical and simulation-based DTA models and DTA solution algorithms, it was built with particular focus on the integration of different transportation modules, unlike \textit{ta\_solver} that was designed to solve DTA problems. In addition, VISTA has no fundamental DTA problem formulation, while \textit{ta\_solver} is based on VI. 
+to combine simulation-based DTA models with analytical methods including mathematical programming and optimal control into one software platform. In addition, our software framework is based on a clear underlying VI DTA formulation. The general VI formulation determines the overall software architecture, but also provide a way to incorporate any type of DTA problem that can be represented with VI. Ziliaskopoulos and Waller developed VISTA,
+an internet-based geographic information system that integrates transportation spatio-temporal data and models into a single framework. While VISTA does integrate analytical and simulation-based DTA models along with DTA solution algorithms, it was built with particular focus on the integration of different transportation modules. This is unlike \textit{ta\_solver} that was designed to solve DTA problems. In addition, VISTA has no fundamental DTA problem formulation, while \textit{ta\_solver} is based on VI. 
 Hence, our contributions include:
 \begin{enumerate}
     \item A clear and unified variational inequality formulation for traffic assignment problems (with good notation).
@@ -166,8 +166,8 @@ The Method of Successive Averages (MSA) is a heuristic-based algorithm and does 
 \begin{enumerate}
     \item Start with a feasible assignment $h^1$ and set $k=1$.
     \item Calculate the all-or-nothing assignment $y^k$.
-    \item If ${\frac {\langle F(h^k),y^k-x^k \rangle} {\langle y^k, F(x^k)\rangle}} \leq
-    \epsilon$, stop. Otherwise, go to step 4.
+    \item Terminate if ${\frac {\langle F(h^k),y^k-x^k \rangle} {\langle y^k, F(x^k)\rangle}} \leq
+    \epsilon$ or $k \geq K_{max} $, where $K_{max}$ is the maximum number of iterations allowed. Otherwise, go to step 4.
     \item set $\alpha = 1/k$, and $h^{k+1} = (1-\alpha)h^k + \alpha y^k$. 
     \item Set $k = k+1$ and go back to step 2.
 \end{enumerate}
@@ -177,7 +177,7 @@ The Frank-Wolfe Algorithm (FW) applies when $F$ is convex and continuously diffe
 \begin{enumerate}
 \item Start with a feasible assignment $h^1$, obtained using the Method of Successive Averages. Set $k=1$.
 \item Determine the all-or-nothing assignment $y^k$ given the current assignment $h^k$.
-\item Terminate if $\nabla F(h^k)(h^k-y^k) \leq \epsilon$ stop; otherwise, go to step 4.
+\item Terminate if $\nabla F(h^k)(h^k-y^k) \leq \epsilon$; otherwise, go to step 4.
 \item Calculate $d^k = y^k - h^k$
 \item Set $h^{k+1} = h^k +\alpha d^k$, where $\alpha$ is a solution the one-dimensional problem: $\min_{0 \leq \alpha \leq 1}G(h^k + \alpha d^k)$ and $G = \int_h F$.
 \item Set $k = k+1$ and go back to step 2.
