--- a/citation.bib
+++ b/citation.bib
@@ -149,3 +149,11 @@
   howpublished = {\url{http://mctrans.ce.ufl.edu/featured/dynasmart/}},
   note = {Accessed: 2018-03-27}
 }
+
+@book{nagurney2013network,
+  title={Network economics: A variational inequality approach},
+  author={Nagurney, Anna},
+  volume={10},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
